--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.3",
+    "@mui/icons-material": "^5.10.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
