--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.3",
     "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
     "next": "12.2.5",
+    "phaser": "^3.55.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
